fix(VListGroup): truncated text clip when append-icon rotates

--- a/packages/vuetify/src/components/VList/VListGroup.sass
+++ b/packages/vuetify/src/components/VList/VListGroup.sass
@@ -3,6 +3,12 @@
 @import './_mixins.sass'
 
 // Element
+.v-list-group
+  .v-list-item__icon.v-list-group__header__append-icon
+    min-width: 48px
+    justify-content: flex-end
+    margin-left: 0
+
 .v-list-group--sub-group
   align-items: center
   display: flex
